// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions createNotice() should use default options when none provided 1`] = `
Object {
  "noticeId": "fake-uuid",
  "showDismiss": true,
  "status": "is-info",
  "text": "Notice text",
}
`;

exports[`actions status helpers errorNotice dispatches expected action 1`] = `
Object {
  "notice": Object {
    "noticeId": "fake-uuid",
    "showDismiss": true,
    "status": "is-error",
    "text": "text",
  },
  "type": "NOTICE_CREATE",
}
`;

exports[`actions status helpers infoNotice dispatches expected action 1`] = `
Object {
  "notice": Object {
    "noticeId": "fake-uuid",
    "showDismiss": true,
    "status": "is-info",
    "text": "text",
  },
  "type": "NOTICE_CREATE",
}
`;

exports[`actions status helpers plainNotice dispatches expected action 1`] = `
Object {
  "notice": Object {
    "noticeId": "fake-uuid",
    "showDismiss": true,
    "status": "is-plain",
    "text": "text",
  },
  "type": "NOTICE_CREATE",
}
`;

exports[`actions status helpers successNotice dispatches expected action 1`] = `
Object {
  "notice": Object {
    "noticeId": "fake-uuid",
    "showDismiss": true,
    "status": "is-success",
    "text": "text",
  },
  "type": "NOTICE_CREATE",
}
`;

exports[`actions status helpers warningNotice dispatches expected action 1`] = `
Object {
  "notice": Object {
    "noticeId": "fake-uuid",
    "showDismiss": true,
    "status": "is-warning",
    "text": "text",
  },
  "type": "NOTICE_CREATE",
}
`;
